# BERB-common

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/berb_common/: __init__.py  research_sources.py
src/berb_common/anthropic/: __init__.py  client.py  tools.py
src/berb_common/logging/: __init__.py  config.py
src/berb_common/models/: __init__.py  constants.py  responses.py  retry.py
src/berb_common/prompts/: __init__.py  registry.py
src/berb_common/secrets/: __init__.py  onepassword.py  resolve.py
src/berb_common/verified_sources/: __init__.py  models.py  parser.py  prompts.py  runner.py  verifier.py
tests/: conftest.py  test_research_sources.py  test_smoke.py
tests/anthropic/: test_client.py  test_tools.py
tests/logging/: conftest.py  test_config.py
tests/models/: test_constants.py  test_responses.py  test_retry.py
tests/prompts/: test_registry.py
tests/prompts/fixtures/: bad_root.yaml  greeting.yaml  missing_key.yaml  system.yaml  with_default.yaml  wrong_type.yaml
tests/secrets/: conftest.py  test_onepassword.py  test_resolve.py
tests/verified_sources/: test_parser.py  test_prompts.py  test_runner.py  test_verifier.py
